--- a/cfone/cfone.csproj
+++ b/cfone/cfone.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01179" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01179" />
+    <PackageReference Include="DSharpPlus.Lavalink" Version="4.3.0-nightly-01179" />
   </ItemGroup>
 
 </Project>
