--- a/cfone/Properties/launchSettings.json
+++ b/cfone/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "cfone": {
-      "commandName": "Project",
-      "commandLineArgs": "NjkwOTk3MzA0OTg3MDkwOTQ0.GtBItq.T6QPVzT_3peicv42oplyjB81-uMZKRVziMATIE"
+      "commandName": "Project"
     }
   }
 }
