Modified .gitignore in order to remove cfone/Properties AGAIN

--- a/.gitignore
+++ b/.gitignore
@@ -397,7 +397,7 @@ cfone/cfone/obj/*
 cfone/cfone/bin/*
 
 # Properties Folder
-cfone/cfone/Properties/*
+cfone/cfone/Properties/
 
 ############# My own stuff (no cap fr!!!)
 
