--- a/cfone/cfone.csproj
+++ b/cfone/cfone.csproj
@@ -2,16 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="2.3.0" />
-    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-00009" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-00009" />
-    <PackageReference Include="DSharpPlus.Lavalink" Version="5.0.0-nightly-00009" />
+    <PackageReference Include="DSharpPlus" Version="4.3.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0" />
+    <PackageReference Include="DSharpPlus.Lavalink" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
